DELETE for Tags and Templates done Add comments Add TODO
