# swagger/email-specs/src/main/resources/api-spec.yaml
@@ -56,6 +56,7 @@ paths:
           description: Tag geted
           schema:
             $ref: '#/definitions/Tag'
+#    TODO: PUT
 #    put:
 #      summary: Update a tag
 #      operationId: updateTag
@@ -74,6 +75,7 @@ paths:
 #      responses:
 #        '200':
 #          description: Tag updated
+#    TODO: PATCH
 #    patch:
 #      summary: Update name of a tag
 #      operationId: updateTagName
@@ -91,19 +93,19 @@ paths:
 #      responses:
 #        '200':
 #          description: Name of tag updated
-#    delete:
-#      summary: Delete a tag
-#      operationId: deleteTag
-#      parameters:
-#        - name: id
-#          in: path
-#          type: integer
-#          format: int64
-#          description: tag ID
-#          required: true
-#      responses:
-#        '200':
-#          description: Tag deleted
+    delete:
+      summary: Delete a tag
+      operationId: deleteTag
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          format: int64
+          description: tag ID
+          required: true
+      responses:
+        '200':
+          description: Tag deleted
 
   /templates:
     post:
@@ -153,6 +155,19 @@ paths:
           description: Template geted
           schema:
             $ref: '#/definitions/Template'
+    delete:
+      summary: Delete a template
+      operationId: deleteTemplate
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          format: int64
+          description: template ID
+          required: true
+      responses:
+        '200':
+          description: Template deleted
 
   /emails:
     post:
@@ -226,6 +241,7 @@ definitions:
       tags:
         type: array
         items:
+#         TODO: Voir comment utiliser une class ShortTag
           type: string
       parameters:
         type: array
@@ -263,6 +279,7 @@ definitions:
   Email:
     type: object
     properties:
+      # TODO: Ajouter un attribut URL ?
       sender:
         type: string
       recipients:
